Validacion Cliente y Servidor, Casos 1,2 y 3

--- a/views/users/user_login.html
+++ b/views/users/user_login.html
@@ -23,7 +23,7 @@
             <label class="control-label col-sm-2" for="password">Password:</label>
             <div class="col-sm-12">
                 <input id="password" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true" maxlength="50" minlength="8"/>
+                       placeholder="contraseña" required="true"/>
             </div>
             <div class="centeredText">
                 <a class="contrasenaOlvidarLink" data-toggle="modal" data-target="#modeloRecuperarContrasena">¿Has
