--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -10,12 +10,12 @@
     </ol>
 </nav>
 <div class="container">
-    <h2 class="sectionHeader">Modificar Contraseña</h2>
+    <h2 class="sectionHeader">Editar Perfil</h2>
     <form class="form-horizontal" method="post" action="/users/edit" encType="multipart/form-data">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" rs
+                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario"
                        value="{{ user.name }}" maxlength="20" minlength="2"/>
             </div>
         </div>
