--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -27,6 +27,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Contraseña Actual:</label>
+            <div class="col-sm-10">
+                <input id="oldPassword" type="password" class="form-control" name="oldPassword"
+                       maxlength="50" minlength="8"/>
+            </div>
+        </div>
+        <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-10">
                 <input id="password" type="password" class="form-control" name="password"
