--- a/views/users/user_signin.html
+++ b/views/users/user_signin.html
@@ -10,7 +10,7 @@
     </ol>
 </nav>
 <div class="container">
-    <h2 class="sectionHeader">Registrar usuario</h2>
+    <h2 class="sectionHeader">Registrar Usuario</h2>
     <form class="form-horizontal" method="post" action="/signin">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
