--- a/views/agents/agent_modify.html
+++ b/views/agents/agent_modify.html
@@ -12,49 +12,41 @@
 </nav>
 <div class="container">
     <h2 class="sectionHeader">Edición de Agente Existente</h2>
-    <h3>Si deja un campo vacío, éste mantendrá su estado original.</h3>
     <form class="form-horizontal" method="post" action="/agents/edit/{{agent._id.toString()}}">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Agente" value="{{agent.name}}" required="true"/>
+                <input type="text" class="form-control" name="name"
+                       placeholder="Nombre del Agente" value="{{agent.name}}"
+                       required="true" minlength="2" maxlength="20"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="surname" value="{{agent.surname}}" placeholder="Apellidos del Agente"
-                       required="true"/>
+                       required="true" minlength="2" maxlength="30"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" name="email" value="{{agent.email}}"
-                       placeholder="email@email.com" required="true"/>
+                       placeholder="email@email.com" required="true"  minlength="8" maxlength="50"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-10">
                 <input id="password" type="password" class="form-control"  name="password"
-                       placeholder="Contraseña" required="true"/>
+                       placeholder="Contraseña" required="true" minlength="8" maxlength="100"/>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id="confirmEditAgent" type="submit" class="btn btn-primary">Editar Agente</button>
+                <button id="confirmEditAgent" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Editar Agente</button>
             </div>
         </div>
-
-        <script>
-            function checkProperty(name) {
-                if (name == "" || name == null) {
-                    return false;
-                }
-                return true;
-            }
-        </script>
     </form>
 </div>
 {% endblock %}
