--- a/views/properties/property_details.html
+++ b/views/properties/property_details.html
@@ -98,7 +98,7 @@
             </a>
             {% else %}
             <form class="inline-form" method="post"
-                  action="/wishes/{{ property._id.toString() }}"
+                  action="/wishes/add/{{ property._id.toString() }}"
                   encType="multipart/form-data">
                 <button id="btnAnadirSeguimiento" type="submit" class="btn btn-outline-success"><span class="far fa-heart"></span>
                     Añadir a Mi Seguimiento
