--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -270,6 +270,12 @@ dt {
     margin-left: auto;
     margin-right: 0;
 }
+.message-date-pr{
+    font-size: 0.5em;
+    margin-left: auto;
+    margin-right: 0;
+}
+
 
 .input-chat{
     margin-top: 2em;
