--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -16,21 +16,21 @@
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario"
-                       value="{{ user.name }}" maxlength="20" minlength="2"/>
+                       value="{{ user.name }}" maxlength="20" minlength="2" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
-                       value="{{ user.surname }}" maxlength="50" minlength="8"/>
+                       value="{{ user.surname }}" maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Contraseña Actual:</label>
             <div class="col-sm-10">
                 <input id="oldPassword" type="password" class="form-control" name="oldPassword"
-                       maxlength="50" minlength="8"/>
+                       maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button id="confirmEditProfile" type="submit" class="btn btn-dark">Modificar Perfil</button>
+                <button id="confirmEditProfile" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Perfil</button>
             </div>
         </div>
         <p id="message"></p>
