--- a/views/users/user_passwordRecover.html
+++ b/views/users/user_passwordRecover.html
@@ -10,18 +10,18 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="password">Nueva Contraseña:</label>
             <div class="col-sm-10">
-                <input id="password" type="password" class="form-control" name="password" maxlength="50" minlength="8"/>
+                <input id="password" type="password" class="form-control" name="password" maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
             <div class="col-sm-10">
-                <input id="passwordR" type="password" class="form-control" name="passwordR" maxlength="50" minlength="8"/>
+                <input id="passwordR" type="password" class="form-control" name="passwordR" maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-dark">Modificar Contraseña</button>
+                <button type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Contraseña</button>
             </div>
         </div>
     </form>
