--- a/views/properties/property_details.html
+++ b/views/properties/property_details.html
@@ -94,7 +94,7 @@
             {% if user.wishes.includes(property._id.toString()) %}
             <a class="btn btn-success" href="/wishes/delete/{{ property._id.toString() }}"><span
                     class="far fa-heart"></span>
-                Eliminar de Mi Seguimiento
+                Eliminar de Seguimiento
             </a>
             {% else %}
             <form class="inline-form" method="post"
