--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -41,6 +41,13 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-sm-3" for="password">Repetir Nueva Contraseña:</label>
+            <div class="col-sm-9">
+                <input id="passwordR" type="password" class="form-control" name="passwordR"
+                       maxlength="50" minlength="8"/>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button id="confirmEditProfile" type="submit" class="col-md-12 btnSiguiente btn custom-base-style btn-lg">Modificar Perfil</button>
             </div>
