--- a/views/users/user_login.html
+++ b/views/users/user_login.html
@@ -20,9 +20,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="password">Password:</label>
+            <label class="control-label col-sm-2" for="passwordR">Password:</label>
             <div class="col-sm-12">
-                <input id="password" type="password" class="form-control" name="password"
+                <input id="passwordR" type="password" class="form-control" name="password"
                        placeholder="contraseña" required="true"/>
             </div>
             <div class="centeredText">
