--- a/views/users/user_signin.html
+++ b/views/users/user_signin.html
@@ -33,10 +33,17 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="password">Password:</label>
+            <label class="control-label col-sm-2" for="password">Contraseña:</label>
             <div class="col-sm-10">
                 <input id="password" type="password" class="form-control" name="password"
-                       placeholder="contraseña" required="true" minlength="8" maxlength="50"/>
+                       placeholder="Contraseña" required="true" minlength="8" maxlength="50"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="passwordR">Repetir Contraseña:</label>
+            <div class="col-sm-10">
+                <input id="passwordR" type="password" class="form-control" name="passwordR"
+                       placeholder="Repetir contraseña" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
         <div class="div-field form-row">
