--- a/views/wishes/wishes_mywishes.html
+++ b/views/wishes/wishes_mywishes.html
@@ -29,7 +29,7 @@
                 <td>{{ property.typeOp }}</td>
                 <td>{{ property.price }}</td>
                 <td>
-                    <a class="btn btn-danger float-right" href="/wishes/delete/{{ property._id.toString() }}">Eliminar</a>
+                    <a class="btn btn-danger float-right" href="/wishes/delete/{{ property._id.toString() }}"><span class="fas fa-trash"></span>Eliminar</a>
                     <a class="btn-wishes btn btn-dark float-right" href="/properties/details/{{ property._id.toString() }}"><span
                             class="far fa-eye"></span> Ver</a>
                 </td>
