--- a/views/base.html
+++ b/views/base.html
@@ -131,6 +131,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/info/contact">Contacto</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/info/help">Ayuda</a>
+                </li>
             </ul>
 
             <ul class="navbar-nav navbar-right">
