--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -19,9 +19,9 @@ html, body {
     margin-right: 0.5em;
 }
 
-.link-logo{
+.link-logo {
     height: 2em;
-    width:7em;
+    width: 7em;
 }
 
 .imgLogo {
@@ -218,29 +218,29 @@ dt {
     opacity: 0.2;
 }
 
-.pagination{
+.pagination {
     margin-right: auto;
     margin-left: auto;
     margin-top: 2em;
 }
 
-.page-item.active .page-link{
+.page-item.active .page-link {
     background-color: #224226;
     border-color: #224226;
 }
 
-.page-link{
+.page-link {
     color: #224226;
     background-color: white;
 }
 
-.img-table{
+.img-table {
     height: 8em;
     width: 10em;
 }
 
 .message-pl,
-.message-pr{
+.message-pr {
     margin-top: 0.25em;
     margin-bottom: 0.25em;
     padding-top: 0.25em;
@@ -249,13 +249,13 @@ dt {
     min-width: 15%;
     text-align: left;
     color: black;
-    overflow:hidden;
+    overflow: hidden;
     word-wrap: break-word;
     max-width: 75%;
     width: fit-content;
 }
 
-.message-pl{
+.message-pl {
     padding-left: 0.5em;
     padding-right: 1em;
     background-color: #E0E0E0;
@@ -263,47 +263,117 @@ dt {
     margin-right: auto;
 }
 
-.message-pr{
+.message-pr {
     padding-left: 1em;
     padding-right: 0.5em;
-    background-color: #AFDFF5 ;
+    background-color: #AFDFF5;
     margin-left: auto;
     margin-right: 0;
 }
-.message-date-pr{
+
+.message-date-pr {
     font-size: 0.5em;
     margin-left: auto;
     margin-right: 0;
 }
 
 
-.input-chat{
+.input-chat {
     margin-top: 2em;
 }
 
-.message-container{
+.message-container {
     margin-top: 4em;
 }
 
-.custom-base-style{
+.custom-base-style {
     color: white;
     background-color: #224226;
     text-decoration: none;
 }
 
 a.custom-base-style:hover,
-button.custom-base-style:hover{
+button.custom-base-style:hover {
     color: white;
     background-color: black;
     text-decoration: none;
 }
 
-.breadcrumb{
+.breadcrumb {
     background-color: white;
     border-radius: 0;
 }
 
-.mini-header{
+.mini-header {
     text-align: center;
 }
 
+
+.loader-wrapper {
+    background-color: #224226;
+    opacity: 50%;
+    height: 100%;
+    text-align: center;
+}
+
+.loader {
+    display: inline-block;
+    width: 5em;
+    height: 5em;
+    position: relative;
+    border: 4px solid #Fff;
+    top: 50%;
+    animation: loader 2s infinite ease;
+}
+
+.loader-inner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #fff;
+    animation: loader-inner 2s infinite ease-in;
+}
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(180deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    75% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes loader-inner {
+    0% {
+        height: 0%;
+    }
+
+    25% {
+        height: 0%;
+    }
+
+    50% {
+        height: 100%;
+    }
+
+    75% {
+        height: 100%;
+    }
+
+    100% {
+        height: 0%;
+    }
+}
