--- a/views/base.html
+++ b/views/base.html
@@ -221,7 +221,7 @@
                             <label class="control-label" for="password">Perderá toda la información almacenada en
                                 ella.</label>
                             <div class="col-sm-10">
-                                <input id="confirmPasswordDelete" type="password" class="form-control" name="password"
+                                <input id="confirmPasswordDelete" id="password" type="password" class="form-control" name="password"
                                        placeholder="Contraseña" required="true"/>
                             </div>
                         </div>
