--- a/views/info/info_contact.html
+++ b/views/info/info_contact.html
@@ -51,12 +51,12 @@
                 <div class="div-field form-row">
                     <label class="control-label" for="phones">Números de Teléfono, separados por comas:</label>
                     <div class="col-sm-12">
-                    <textarea class="form-control" name="phones" maxlength="255"
+                    <textarea class="form-control" id="phones" name="phones" maxlength="255"
                               rows="3"></textarea>
                     </div>
                 </div>
                 <div class="div-field form-row">
-                    <label class="control-label" for="emails">E-Mails, separados por comas:</label>
+                    <label class="control-label" id="emails" for="emails">E-Mails, separados por comas:</label>
                     <div class="col-sm-12">
                     <textarea class="form-control" name="emails" maxlength="255"
                               rows="3"></textarea>
