--- a/views/users/user_login.html
+++ b/views/users/user_login.html
@@ -15,7 +15,7 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-12">
-                <input type="email" class="form-control" name="email"
+                <input type="email" class="form-control" id="email" name="email"
                        placeholder="email@email.com" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
@@ -53,7 +53,7 @@
                                 que
                                 reestablezca la contraseña.</label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control" name="correoRecuperacion"
+                                <input type="email" class="form-control" id="correoRecuperacion" name="correoRecuperacion"
                                        placeholder="Ej. user@email.com" required="true" minlength="8" maxlength="50"/>
                             </div>
                         </div>
