--- a/views/users/user_modify.html
+++ b/views/users/user_modify.html
@@ -15,14 +15,14 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario"
+                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre del Usuario"
                        value="{{ user.name }}" maxlength="20" minlength="2" required="true"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
+                <input type="text" class="form-control" id="surname" name="surname" placeholder="Apellidos del Usuario"
                        value="{{ user.surname }}" maxlength="50" minlength="8" required="true"/>
             </div>
         </div>
