--- a/views/users/user_signin.html
+++ b/views/users/user_signin.html
@@ -15,20 +15,20 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Nombre:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" placeholder="Nombre del Usuario" required="true" minlength="2" maxlength="20"/>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre del Usuario" required="true" minlength="2" maxlength="20"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="surname">Apellidos:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="surname" placeholder="Apellidos del Usuario"
+                <input type="text" class="form-control" id="surname" name="surname" placeholder="Apellidos del Usuario"
                        required="true" minlength="2" maxlength="30"/>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-10">
-                <input type="email" class="form-control" name="email"
+                <input type="email" class="form-control" id="email" name="email"
                        placeholder="email@email.com" required="true" minlength="8" maxlength="50"/>
             </div>
         </div>
